--- a/WebshopBackend/appsettings.Development.json
+++ b/WebshopBackend/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WebsiteDB": "Server=sql-store-kea-sd23.mysql.database.azure.com;Database=sql_store;Uid=admin1;Pwd=Password123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
