--- a/WebshopBackend/appsettings.Development.json
+++ b/WebshopBackend/appsettings.Development.json
@@ -7,5 +7,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "frontend_url": "http://localhost:3000"
 }
